Tipos de datos en python y funciones + tarea

--- a/introduccion_python.ipynb
+++ b/introduccion_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRwgWHuqrhlWZmOXiKr/fD",
+      "authorship_tag": "ABX9TyMojMdr0yBGoYSBPHM7bV+q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -68,7 +68,7 @@
         "id": "b4t6gSNhdTxg",
         "outputId": "131ae991-0305-4879-8535-5f8b278d59d9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
         "id": "IRYZG-TOesvA",
         "outputId": "742a0c35-ef3d-47a5-92ee-0372e7f700a9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
         "id": "Vhfyiccqfh_b",
         "outputId": "9dfc1afd-f939-49c6-efb3-61d990466e07"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
         "id": "V9uOYaSMh2se",
         "outputId": "0e18720b-9cf7-42a0-b3a8-b17f14dffdc3"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,6 +158,219 @@
             "Ingrese el primer numero: 5\n",
             "Ingrese el segundo numero: 5\n",
             "la resta de 5.0 - 5.0 es: 0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TIPOS DE DATOS EN PYTHON"
+      ],
+      "metadata": {
+        "id": "6o6hYYV74Jor"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#ENTERO\n",
+        "num1 = 6\n",
+        "print(num1, \"Esto es un numero entero\")\n",
+        "print( str(num1) + \" Esto es un entero\"  )\n",
+        "\n",
+        "#DECIMAL\n",
+        "num2 = 7.5\n",
+        "print(num2, \"Esto es un numero decimal\")\n",
+        "\n",
+        "#BOOLEANO\n",
+        "esMayor = True\n",
+        "print(esMayor, \"Esto es un booleano\")\n",
+        "\n",
+        "#CADENA\n",
+        "nombre = \"David Castro\"\n",
+        "cadena = input(\"Dime una cadena: \")\n",
+        "valor = int(input(\"Dime un valor: \"))\n",
+        "print(nombre, \"Esto es una cadena\", cadena[:valor])\n",
+        "\n",
+        "print( nombre, \"Letra inicial\", nombre[0],  \"Un valor especifico\", nombre[5], \"rango\", nombre[0:4], \"Comenzar desde el final\", nombre[-1])\n",
+        "print( nombre[5:len(nombre)], nombre[:4] )\n",
+        "print(type(nombre))"
+      ],
+      "metadata": {
+        "id": "-fCK4O-k4Njj",
+        "outputId": "c38a919f-9368-4910-9b89-b7aaf8ba3c8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6 Esto es un numero entero\n",
+            "6 Esto es un entero\n",
+            "7.5 Esto es un numero decimal\n",
+            "True Esto es un booleano\n",
+            "Dime una cadena: David\n",
+            "Dime un valor: 2\n",
+            "David Castro Esto es una cadena Da\n",
+            "David Castro Letra inicial D Un valor especifico   rango Davi Comenzar desde el final o\n",
+            " Castro Davi\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#FECHAS\n",
+        "from datetime import datetime, date, time\n",
+        "fecha = datetime.now()\n",
+        "print(fecha, fecha.date(), fecha.time())\n",
+        "print(type(fecha))\n",
+        "\n",
+        "fechaPersonalizada = date(2025,8,1)\n",
+        "print(fechaPersonalizada)\n",
+        "\n",
+        "fecha = \"2025-08-08\"\n",
+        "fecha = datetime.strptime(fecha, \"%Y-%m-%d\")\n",
+        "print(fecha)\n",
+        "\n",
+        "print( fecha.strftime(\"%d/%m/%Y\"), \"Regresamos a clases \" )\n",
+        "\n",
+        "fechaNac = input(\"Dime tu fecha de nacimiento en formato d-m-Y: \")\n",
+        "fechaNac = datetime.strptime(fechaNac, \"%d-%m-%Y\")\n",
+        "print(fechaNac)"
+      ],
+      "metadata": {
+        "id": "iKzh6VBK4Vo5",
+        "outputId": "97bf2c1f-745f-47d5-a9bf-afbae4d3bc1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2025-07-29 01:52:13.203352 2025-07-29 01:52:13.203352\n",
+            "<class 'datetime.datetime'>\n",
+            "2025-08-01\n",
+            "2025-08-08 00:00:00\n",
+            "08/08/2025 Regresamos a clases \n",
+            "Dime tu fecha de nacimiento en formato d-m-Y: 31-08-2006\n",
+            "2006-08-31 00:00:00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FUNCIONES EN PYTHON"
+      ],
+      "metadata": {
+        "id": "Vldlnlvw4cPT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Suma\n",
+        "def suma(num1, num2):\n",
+        "  return num1 + num2\n"
+      ],
+      "metadata": {
+        "id": "IihtwmFx4gG6"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"La suma de 5 + 8 = \", suma(5,8))"
+      ],
+      "metadata": {
+        "id": "IF0n2NUy5MCj",
+        "outputId": "39e5e0ec-5cce-49bf-8651-4c3988860f4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La suma de 5 + 8 =  13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = float(input(\"Num1: \"))\n",
+        "num2 = float(input(\"Num2: \"))\n",
+        "respuesta = suma(num1, num2)\n",
+        "print(\"La suma es: \", respuesta)"
+      ],
+      "metadata": {
+        "id": "_Z9Z-obQ5OBS",
+        "outputId": "0cd30dab-8510-4d37-f2dc-dc1e7e4b243b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num1: 5\n",
+            "Num2: 6\n",
+            "La suma es:  11.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Resta\n",
+        "def resta(num1, num2):\n",
+        "  return num1 - num2\n",
+        "\n",
+        "num1 = float(input(\"Num1: \"))\n",
+        "num2 = float(input(\"Num2: \"))\n",
+        "respuesta = resta(num1, num2)\n",
+        "print(\"La resta es: \", respuesta)"
+      ],
+      "metadata": {
+        "id": "HPNM9EW25W9j",
+        "outputId": "79b6736a-bcef-4b56-b774-ac76f9b1de40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num1: 4\n",
+            "Num2: 2\n",
+            "La resta es:  2.0\n"
           ]
         }
       ]
