--- a/introduccion_python.ipynb
+++ b/introduccion_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMojMdr0yBGoYSBPHM7bV+q",
+      "authorship_tag": "ABX9TyOq2DkN1bCqoeIiRxviL0YS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,7 +204,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +253,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "IihtwmFx4gG6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,7 +304,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +330,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,7 +362,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,6 +374,393 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**EJERCICIOS PRACTICOS**"
+      ],
+      "metadata": {
+        "id": "y_ngbBDTsx1z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CALCULADOR DE SUELDO**"
+      ],
+      "metadata": {
+        "id": "eCYWUSxGs9-S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sueldo = float(input(\"Ingrese su sueldo: $\"))\n",
+        "\n",
+        "isss = sueldo * 0.03\n",
+        "afp = sueldo * 0.0725\n",
+        "\n",
+        "sueldo_para_isr = sueldo - afp\n",
+        "\n",
+        "if sueldo_para_isr <= 472.00:\n",
+        "    isr = 0\n",
+        "elif sueldo_para_isr <= 895.24:\n",
+        "    isr = (sueldo_para_isr - 472.00) * 0.10 + 15.27\n",
+        "elif sueldo_para_isr <= 2038.10:\n",
+        "    isr = (sueldo_para_isr - 895.24) * 0.20 + 60.00\n",
+        "else:\n",
+        "    isr = (sueldo_para_isr - 2038.10) * 0.30 + 288.57\n",
+        "\n",
+        "total_deducciones = isss + afp + isr\n",
+        "sueldo_neto = sueldo - total_deducciones\n",
+        "sueldo_neto_quincenal = sueldo_neto / 2\n",
+        "\n",
+        "print(\"Resultados:\")\n",
+        "print(f\"ISSS (3%): ${isss:.2f}\")\n",
+        "print(f\"AFP (7.25%): ${afp:.2f}\")\n",
+        "print(f\"Sueldo para ISR (Sueldo - AFP): ${sueldo_para_isr:.2f}\")\n",
+        "print(f\"ISR: ${isr:.2f}\")\n",
+        "print(f\"Total deducciones: ${total_deducciones:.2f}\")\n",
+        "print(f\"Sueldo neto mensual: ${sueldo_neto:.2f}\")\n",
+        "print(f\"Sueldo neto quincenal: ${sueldo_neto_quincenal:.2f}\")\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "2GUm1J_NtF7l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**TARIFA DE AGUA**"
+      ],
+      "metadata": {
+        "id": "G8df0xrStKyt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "metros = int(input(\"Ingrese los metros consumidos: \"))\n",
+        "total_pagar = 0\n",
+        "\n",
+        "if metros >= 1 and metros <= 18:\n",
+        "    total_pagar = 6\n",
+        "elif metros >= 19 and metros <= 28:\n",
+        "    exceso = metros - 18\n",
+        "    total_pagar = 6 + (exceso * 0.45)\n",
+        "elif metros >= 29:\n",
+        "    total_28 = 6 + ((28 - 18) * 0.45)\n",
+        "    exceso_29 = metros - 28\n",
+        "    total_pagar = total_28 + (exceso_29 * 0.65)\n",
+        "\n",
+        "print(f\"Total a pagar: ${total_pagar:.2f}\")\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "v6Xj2tMQtPBG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**TABLA DE MESES ACUMULADO**"
+      ],
+      "metadata": {
+        "id": "93bQ62IvtRmR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input(\"Ingrese el número de meses: \"))\n",
+        "\n",
+        "print(\"MES\\tACUMULACION\")\n",
+        "acumulado = 0\n",
+        "for mes in range(1, n+1):\n",
+        "    acumulado = acumulado + mes\n",
+        "    print(f\"{mes}\\t{acumulado}\")\n",
+        "\n",
+        "print(f\"\\nUsando fórmula para mes {n}: {n *(n+1)//2}\")"
+      ],
+      "metadata": {
+        "id": "NhU_j1sAtWsv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CONVERSOR**"
+      ],
+      "metadata": {
+        "id": "9FJfLObbtbG0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "LONGITUD = [\n",
+        "  (\"milímetro (mm)\", 0.001),\n",
+        "  (\"centímetro (cm)\", 0.01),\n",
+        "  (\"metro (m)\", 1.0),\n",
+        "  (\"kilómetro (km)\", 1000.0),\n",
+        "  (\"pulgada (in)\", 0.0254),\n",
+        "  (\"pie (ft)\", 0.3048),\n",
+        "  (\"yarda (yd)\", 0.9144),\n",
+        "  (\"milla (mi)\", 1609.344),\n",
+        "  (\"micrómetro (µm)\", 1e-6),\n",
+        "  (\"milla náutica (NM)\", 1852.0),\n",
+        "]\n",
+        "\n",
+        "MASA = [\n",
+        "  (\"microgramo (µg)\", 1e-9),\n",
+        "  (\"miligramo (mg)\", 1e-6),\n",
+        "  (\"gramo (g)\", 0.001),\n",
+        "  (\"kilogramo (kg)\", 1.0),\n",
+        "  (\"tonelada (t)\", 1000.0),\n",
+        "  (\"onza (oz)\", 0.028349523125),\n",
+        "  (\"libra (lb)\", 0.45359237),\n",
+        "  (\"quintal (qq)\", 46.0),\n",
+        "  (\"quilate (ct)\", 0.0002),\n",
+        "  (\"arroba (@)\", 11.502),\n",
+        "]\n",
+        "\n",
+        "ALMACENAMIENTO = [\n",
+        "  (\"bit\", 0.125),\n",
+        "  (\"byte\", 1),\n",
+        "  (\"kilobyte (KB)\", 1000),\n",
+        "  (\"megabyte (MB)\", 1000000),\n",
+        "  (\"gigabyte (GB)\", 1000000000),\n",
+        "  (\"terabyte (TB)\", 1000000000000),\n",
+        "  (\"petabyte (PB)\", 1000000000000000),\n",
+        "  (\"kibibyte (KiB)\", 1024),\n",
+        "  (\"mebibyte (MiB)\", 1048576),\n",
+        "  (\"gibibyte (GiB)\", 1073741824),\n",
+        "]\n",
+        "\n",
+        "TIEMPO = [\n",
+        "  (\"milisegundo (ms)\", 0.001),\n",
+        "  (\"segundo (s)\", 1.0),\n",
+        "  (\"minuto (min)\", 60.0),\n",
+        "  (\"hora (h)\", 3600.0),\n",
+        "  (\"día\", 86400.0),\n",
+        "  (\"semana\", 604800.0),\n",
+        "  (\"mes (30d)\", 2592000.0),\n",
+        "  (\"año (365d)\", 31536000.0),\n",
+        "  (\"década\", 315360000.0),\n",
+        "  (\"siglo\", 3153600000.0),\n",
+        "]\n",
+        "\n",
+        "VOLUMEN = [\n",
+        "  (\"metro cúbico (m³)\", 1.0),\n",
+        "  (\"litro (L)\", 0.001),\n",
+        "  (\"mililitro (mL)\", 0.000001),\n",
+        "  (\"centímetro cúbico (cm³)\", 1e-6),\n",
+        "  (\"pulgada cúbica (in³)\", 1.6387064e-5),\n",
+        "  (\"pie cúbico (ft³)\", 0.028316846592),\n",
+        "  (\"yarda cúbica (yd³)\", 0.764554857984),\n",
+        "  (\"galón US\", 0.003785411784),\n",
+        "  (\"cuarto US\", 0.000946352946),\n",
+        "  (\"pinta US\", 0.000473176473),\n",
+        "]\n",
+        "\n",
+        "AREA = [\n",
+        "  (\"metro cuadrado (m²)\", 1.0),\n",
+        "  (\"kilómetro cuadrado (km²)\", 1000000.0),\n",
+        "  (\"hectárea (ha)\", 10000.0),\n",
+        "  (\"acre\", 4046.8564224),\n",
+        "  (\"pie cuadrado (ft²)\", 0.09290304),\n",
+        "  (\"pulgada cuadrada (in²)\", 0.00064516),\n",
+        "  (\"centímetro cuadrado (cm²)\", 0.0001),\n",
+        "  (\"manzana salvadoreña\", 6988.96),\n",
+        "  (\"tarea salvadoreña\", 628.8),\n",
+        "  (\"yarda cuadrada (yd²)\", 0.83612736),\n",
+        "]\n",
+        "\n",
+        "MONEDAS = [\n",
+        "  (\"Dólar estadounidense (USD)\", 1.0),\n",
+        "  (\"Euro (EUR)\", 0.8573),\n",
+        "  (\"Libra esterlina (GBP)\", 0.7376),\n",
+        "  (\"Yen japonés (JPY)\", 147.25),\n",
+        "  (\"Peso mexicano (MXN)\", 18.85),\n",
+        "  (\"Dólar canadiense (CAD)\", 1.3805),\n",
+        "  (\"Dólar australiano (AUD)\", 1.5340),\n",
+        "  (\"Franco suizo (CHF)\", 0.8570),\n",
+        "  (\"Yuan chino (CNY)\", 7.1850),\n",
+        "  (\"Real brasileño (BRL)\", 5.4200),\n",
+        "]\n",
+        "\n",
+        "CATEGORIAS = [\n",
+        "  (\"monedas\", MONEDAS),\n",
+        "  (\"longitud\", LONGITUD),\n",
+        "  (\"masa\", MASA),\n",
+        "  (\"almacenamiento\", ALMACENAMIENTO),\n",
+        "  (\"tiempo\", TIEMPO),\n",
+        "  (\"volumen\", VOLUMEN),\n",
+        "  (\"área\", AREA),\n",
+        "]\n",
+        "\n",
+        "\n",
+        "for _ in range(1000000):\n",
+        "    print()\n",
+        "    print(\"=\"*50)\n",
+        "    print(\"        CONVERSOR DE UNIDADES EXACTO\")\n",
+        "    print(\"=\"*50)\n",
+        "    print(\"Elige una categoría:\")\n",
+        "    print()\n",
+        "\n",
+        "    for i, cat in enumerate(CATEGORIAS, 1):\n",
+        "        print(f\"{i} - {cat[0].upper()}\")\n",
+        "    print()\n",
+        "\n",
+        "    try:\n",
+        "        cat_sel = int(input(\"Número de categoría: \")) - 1\n",
+        "        if cat_sel < 0 or cat_sel >= len(CATEGORIAS):\n",
+        "            print(\"¡Opción no válida! Intenta de nuevo.\")\n",
+        "            continue\n",
+        "    except ValueError:\n",
+        "        print(\"¡Por favor ingresa un número válido!\")\n",
+        "        continue\n",
+        "\n",
+        "    nombre_cat, lista = CATEGORIAS[cat_sel]\n",
+        "\n",
+        "    print()\n",
+        "    print(f\"Has elegido: {nombre_cat.upper()}\")\n",
+        "    print()\n",
+        "    print(\"Unidad origen:\")\n",
+        "    for i, item in enumerate(lista, 1):\n",
+        "        print(f\"{i} - {item[0]}\")\n",
+        "    print()\n",
+        "\n",
+        "    try:\n",
+        "        from_i = int(input(\"Número unidad origen: \")) - 1\n",
+        "        if from_i < 0 or from_i >= len(lista):\n",
+        "            print(\"¡Opción no válida!\")\n",
+        "            continue\n",
+        "    except ValueError:\n",
+        "        print(\"¡Por favor ingresa un número válido!\")\n",
+        "        continue\n",
+        "\n",
+        "    print()\n",
+        "    print(\"Unidad destino:\")\n",
+        "    for i, item in enumerate(lista, 1):\n",
+        "        print(f\"{i} - {item[0]}\")\n",
+        "    print()\n",
+        "\n",
+        "    try:\n",
+        "        to_i = int(input(\"Número unidad destino: \")) - 1\n",
+        "        if to_i < 0 or to_i >= len(lista):\n",
+        "            print(\"¡Opción no válida!\")\n",
+        "            continue\n",
+        "    except ValueError:\n",
+        "        print(\"¡Por favor ingresa un número válido!\")\n",
+        "        continue\n",
+        "\n",
+        "    print()\n",
+        "    try:\n",
+        "        valor = float(input(\"Valor a convertir: \"))\n",
+        "    except ValueError:\n",
+        "        print(\"¡Por favor ingresa un número válido!\")\n",
+        "        continue\n",
+        "\n",
+        "    nombre_from, factor_from = lista[from_i]\n",
+        "    nombre_to, factor_to = lista[to_i]\n",
+        "\n",
+        "    if nombre_cat == \"monedas\":\n",
+        "        usd_valor = valor / factor_from\n",
+        "        resultado = usd_valor * factor_to\n",
+        "    else:\n",
+        "        base_valor = valor * factor_from\n",
+        "        resultado = base_valor / factor_to\n",
+        "\n",
+        "    print()\n",
+        "    print(\"=\"*60)\n",
+        "    print(f\"RESULTADO:\")\n",
+        "    print(f\"{valor} {nombre_from}\")\n",
+        "    print(f\"= {resultado:.10f} {nombre_to}\")\n",
+        "    print(\"=\"*60)\n",
+        "    print()\n",
+        "\n",
+        "    if abs(resultado) >= 0.01 or resultado == 0:\n",
+        "        print(f\"Redondeado: {resultado:.2f} {nombre_to}\")\n",
+        "    else:\n",
+        "        print(f\"Valor muy pequeño: {resultado:.10f} {nombre_to}\")\n",
+        "    print()\n",
+        "\n",
+        "    otra = input(\"¿Quieres convertir otra vez? (s para sí / cualquier otra tecla para no): \").strip().lower()\n",
+        "    if otra != \"s\":\n",
+        "        print()\n",
+        "        print(\"=\"*50)\n",
+        "        print(\"   ¡Gracias por usar el conversor!\")\n",
+        "        print(\"=\"*50)\n",
+        "        break"
+      ],
+      "metadata": {
+        "id": "Brexk2cctfIW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CONVERSOR PROPIO**"
+      ],
+      "metadata": {
+        "id": "l4axntI-tofq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "while True:\n",
+        "    print(\"\\n CONVERSOR\")\n",
+        "    print(\"1) Cajas <-> Unidades (1 caja = 25 unidades)\")\n",
+        "    print(\"2) Sacos <-> Libras   (1 saco = 50 libras)\")\n",
+        "    print(\"3) Fardos <-> Unidades (1 fardo = 5 unidades)\")\n",
+        "    print(\"4) Salir\")\n",
+        "\n",
+        "    opcion = input(\"Elige una opción: \")\n",
+        "\n",
+        "    if opcion == \"1\":\n",
+        "        cajas = int(input(\"Ingresa cantidad de cajas: \"))\n",
+        "        print(cajas, \"cajas =\", cajas * 25, \"unidades\")\n",
+        "\n",
+        "        unidades = int(input(\"Ingresa cantidad de unidades: \"))\n",
+        "        print(unidades, \"unidades =\", unidades // 25, \"cajas y\", unidades % 25, \"unidades\")\n",
+        "\n",
+        "    elif opcion == \"2\":\n",
+        "        sacos = int(input(\"Ingresa cantidad de sacos: \"))\n",
+        "        print(sacos, \"sacos =\", sacos * 50, \"libras\")\n",
+        "\n",
+        "        libras = int(input(\"Ingresa cantidad de libras: \"))\n",
+        "        print(libras, \"libras =\", libras // 50, \"sacos y\", libras % 50, \"libras\")\n",
+        "\n",
+        "    elif opcion == \"3\":\n",
+        "        fardos = int(input(\"Ingresa cantidad de fardos: \"))\n",
+        "        print(fardos, \"fardos =\", fardos * 5, \"unidades\")\n",
+        "\n",
+        "        unidades2 = int(input(\"Ingresa cantidad de unidades: \"))\n",
+        "        print(unidades2, \"unidades =\", unidades2 // 5, \"fardos y\", unidades2 % 5, \"unidades\")\n",
+        "\n",
+        "    elif opcion == \"4\":\n",
+        "        print(\"Feliz Dia\")\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"Opción no válida, intenta de nuevo.\")"
+      ],
+      "metadata": {
+        "id": "K2SCSIXjtvKn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
