--- a/introduccion_python.ipynb
+++ b/introduccion_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOq2DkN1bCqoeIiRxviL0YS",
+      "authorship_tag": "ABX9TyOHh/M1gnSaNG0LEtIn7Ppx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -758,6 +758,173 @@
       ],
       "metadata": {
         "id": "K2SCSIXjtvKn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Impuesto a las actividades economicas"
+      ],
+      "metadata": {
+        "id": "ZIpgjl8OufDD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcular_impuesto(monto):\n",
+        "    rangos = [\n",
+        "        (0.01, 500, 1.5, 0),\n",
+        "        (500.01, 1000, 1.5, 3),\n",
+        "        (1000.01, 2000, 3, 3),\n",
+        "        (2000.01, 3000, 6, 3),\n",
+        "        (3000.01, 6000, 9, 2),\n",
+        "        (8000.01, 18000, 15, 2),\n",
+        "        (18000.01, 30000, 39, 2),\n",
+        "        (30000.01, 60000, 63, 1),\n",
+        "        (60000.01, 100000, 93, 0.8),\n",
+        "        (100000.01, 200000, 125, 0.7),\n",
+        "        (200000.01, 300000, 195, 0.6),\n",
+        "        (300000.01, 400000, 255, 0.45),\n",
+        "        (400000.01, 500000, 300, 0.4),\n",
+        "        (500000.01, 1000000, 340, 0.30),\n",
+        "        (1000000.01, 99999999, 490, 0.18)\n",
+        "    ]\n",
+        "\n",
+        "    for desde, hasta, precio, adicional in rangos:\n",
+        "        if desde <= monto <= hasta:\n",
+        "            impuesto = ((monto - desde) / 1000) * adicional + precio\n",
+        "            return round(impuesto, 2)\n",
+        "\n",
+        "    return\n",
+        "\n",
+        "monto = float(input(\"Ingrese el monto de la actividad económica: $\"))\n",
+        "impuesto = calcular_impuesto(monto)\n",
+        "\n",
+        "if impuesto is None:\n",
+        "    print(\"No se puede calcular impuesto.\")\n",
+        "else:\n",
+        "    print(f\"El impuesto a pagar es: ${impuesto}\")"
+      ],
+      "metadata": {
+        "id": "Lx3U1b_Aui4s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Coversor de area"
+      ],
+      "metadata": {
+        "id": "yA1kx0jsunaV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def convertir_area(valor, unidad_origen, unidad_destino):\n",
+        "    # Factores de conversión basados en el metro cuadrado (m²)\n",
+        "    factores = {\n",
+        "        \"pie cuadrado\": 0.092903,\n",
+        "        \"vara cuadrada\": 0.6987,\n",
+        "        \"yarda cuadrada\": 0.836127,\n",
+        "        \"metro cuadrado\": 1,\n",
+        "        \"tarea\": 437.5,\n",
+        "        \"manzana\": 6987.42,\n",
+        "        \"hectarea\": 10000\n",
+        "    }\n",
+        "\n",
+        "    valor_metros = valor * factores[unidad_origen]\n",
+        "\n",
+        "    resultado = valor_metros / factores[unidad_destino]\n",
+        "    return resultado\n",
+        "\n",
+        "\n",
+        "def mostrar_menu():\n",
+        "    print(\"\\n===== CONVERSOR DE ÁREA (El Salvador) =====\")\n",
+        "    print(\"1. Pie Cuadrado\")\n",
+        "    print(\"2. Vara Cuadrada\")\n",
+        "    print(\"3. Yarda Cuadrada\")\n",
+        "    print(\"4. Metro Cuadrado\")\n",
+        "    print(\"5. Tarea\")\n",
+        "    print(\"6. Manzana\")\n",
+        "    print(\"7. Hectárea\")\n",
+        "\n",
+        "\n",
+        "while True:\n",
+        "    mostrar_menu()\n",
+        "    unidades = {\n",
+        "        \"1\": \"pie cuadrado\",\n",
+        "        \"2\": \"vara cuadrada\",\n",
+        "        \"3\": \"yarda cuadrada\",\n",
+        "        \"4\": \"metro cuadrado\",\n",
+        "        \"5\": \"tarea\",\n",
+        "        \"6\": \"manzana\",\n",
+        "        \"7\": \"hectarea\"\n",
+        "    }\n",
+        "\n",
+        "    origen = input(\"\\nSeleccione la unidad de ORIGEN (1-7) o 'salir': \").lower()\n",
+        "    if origen == \"salir\":\n",
+        "        print(\"Gracias por usar el conversor. ¡Hasta luego!\")\n",
+        "        break\n",
+        "\n",
+        "    destino = input(\"Seleccione la unidad de DESTINO (1-7): \").lower()\n",
+        "\n",
+        "    if origen in unidades and destino in unidades:\n",
+        "        valor = float(input(f\"Ingrese el valor en {unidades[origen]}: \"))\n",
+        "        resultado = convertir_area(valor, unidades[origen], unidades[destino])\n",
+        "        print(f\"\\n {valor} {unidades[origen]} equivalen a {resultado:.4f} {unidades[destino]}\")\n",
+        "    else:\n",
+        "        print(\"Opción inválida, intente de nuevo.\")"
+      ],
+      "metadata": {
+        "id": "H9wWxOEOuq7p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cajero Automatico"
+      ],
+      "metadata": {
+        "id": "fVUdr07CuwCY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def cajero_automatico(monto):\n",
+        "    billetes = [100, 50, 20, 10, 5, 1]\n",
+        "    monedas = [0.25, 0.10, 0.05, 0.01]\n",
+        "\n",
+        "    print(f\"\\nCantidad a retirar: ${monto:.2f}\\n\")\n",
+        "\n",
+        "    for b in billetes:\n",
+        "        if monto >= b:\n",
+        "            cantidad = int(monto // b)\n",
+        "            monto = round(monto - cantidad * b, 2)\n",
+        "            print(f\"{cantidad} billete(s) de ${b}\")\n",
+        "\n",
+        "    for m in monedas:\n",
+        "        if monto >= m:\n",
+        "            cantidad = int(monto // m)\n",
+        "            monto = round(monto - cantidad * m, 2)\n",
+        "            print(f\"{cantidad} moneda(s) de ${m:.2f}\")\n",
+        "\n",
+        "    if monto > 0:\n",
+        "        print(f\"Cantidad restante no procesada: {monto}\")\n",
+        "\n",
+        "monto = float(input(\"Ingrese la cantidad a retirar: $\"))\n",
+        "cajero_automatico(monto)"
+      ],
+      "metadata": {
+        "id": "jbVGVAo-uzgE"
       },
       "execution_count": null,
       "outputs": []
